--- a/CDN/meeting.html
+++ b/CDN/meeting.html
@@ -14,7 +14,8 @@
 <body>
     <style>
         #__vconsole {display:none!important;}
-        .vc-switch {display:none!important;}   
+        .vc-switch {display:none!important;}  
+        .meeting-info-container--left-side {display:none!important;} 
     </style>
     <script src="https://source.zoom.us/2.15.2/lib/vendor/react.min.js"></script>
     <script src="https://source.zoom.us/2.15.2/lib/vendor/react-dom.min.js"></script>
