--- a/CDN/meeting.html
+++ b/CDN/meeting.html
@@ -12,6 +12,23 @@
 </head>
 
 <body>
+
+    <img src="https://goodstartplus.github.io/sitefiles/logo_goodstart.png" class="logo-gs" alt="Goodstart Logo">
+  <style>
+       .logo-gs
+    {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 9999;
+      height:20px;
+      weight:20px;
+      opacity: 0.5;
+    }
+         
+    </style>
+
+    
     <style>
         #__vconsole {display:none!important;}
         .vc-switch {display:none!important;}  
