--- a/CDN/meeting.html
+++ b/CDN/meeting.html
@@ -13,12 +13,12 @@
 
 <body>
 
-    <img src="https://goodstartplus.github.io/sitefiles/logo_goodstart.png" class="logo-gs" alt="Goodstart Logo">
+    <img src="https://goodstartplus.github.io/sitefiles/logo_wht.png" class="logo-gs" alt="Goodstart Logo">
   <style>
        .logo-gs
     {
       position: absolute;
-      top: 10px;
+      top: 5px;
       left: 10px;
       z-index: 9999;
       height:20px;
