--- a/CDN/index.html
+++ b/CDN/index.html
@@ -208,7 +208,7 @@ border-radius: 10px;
             <div id="navbar" class="websdktest">
                 <form class="navbar-form navbar-right" id="meeting_form">
                     <div class="form-group">
-                        <input type="text" name="display_name" id="display_name" value="New student" maxLength="100"
+                        <input type="text" name="display_name" id="display_name" value="Carregando... aguarde." maxLength="100"
                             placeholder="Escreva seu nome" class="form-control" required>
                     </div>
                     <div class="form-group">
